variables.Variables.scala.error
Erreur de compilation :
Variables:8: error: not found: value ramasseBiscuit
ramasseBiscuit()
^Variables:10: error: not found: value reposeBiscuit
reposeBiscuit() 
^