variables.Variables.scala.code
var nbPas:Int = 0

while (!estSurBiscuit()) {
  avance();
  nbPas = nbPas + 1;
}

ramasseBiscuit()
recule(nbPas)
reposeBiscuit()